# hc-ops

./: .gitignore  Cargo.toml  Makefile.toml  README.md  diesel.toml  flake.nix
.github/workflows/: test.yaml
fixture/: Cargo.toml  package.sh
fixture/fixture/: Cargo.toml
fixture/fixture/src/: lib.rs
fixture/fixture_integrity/: Cargo.toml
fixture/fixture_integrity/src/: lib.rs
fixture/fixture_types/: Cargo.toml
fixture/fixture_types/src/: lib.rs
fixture/happ/: happ.yaml
fixture/happ/dna/: dna.yaml
migrations/2025-02-26-233842_tags/: down.sql  up.sql
migrations/2025-03-02-013541_agent-tags/: down.sql  up.sql
src/: discover.rs  lib.rs  ops.rs  readable.rs  retrieve.rs
src/hc-ops/: cli.rs  compare.rs  data.rs  explore.rs  interactive.rs  main.rs  render.rs  schema.rs
src/hc-ops/cli/: admin.rs  agent_tag.rs  conductor_tag.rs  explore.rs  init.rs  tag.rs
src/retrieve/: crypt.rs  model.rs  schema.rs
tests/: ops.rs
