[package]
name = "hc-ops"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hc-ops"
path = "src/hc-ops/main.rs"

[dependencies]
clap = "4.5"
holochain_client = { version = "0.6.0", path = "../../holo/holochain-client-rust", default-features = false }
holochain_conductor_api = "0.4.1"
holochain_zome_types = "0.4.1"
thiserror = "2"
anyhow = "1"
dialoguer = "0.11"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
diesel = { version = "2.2", features = ["sqlite"] }
diesel_migrations = "2.2"
serde_json = "1"

proc-ctl = { version = "0.4", path = "../../ephyra/proc-ctl", optional = true }
holochain_websocket = { version = "0.4.1", optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
holochain = { version = "0.4.1", default-features = false, features = ["sweettest", "wasmer_sys"] }

[features]
default = ["discover"]

discover = ["dep:proc-ctl", "dep:holochain_websocket", "dep:futures"]
