[package]
name = "hc-ops"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hc-ops"
path = "src/hc-ops/main.rs"

[dependencies]
clap = "4.5"
holochain_client = { version = "0.6.2", default-features = false }
holochain_conductor_api = "0.4.2"
holochain_types = "0.4.2"
holochain_zome_types = "0.4.2"
holochain_serialized_bytes = "=0.0.55"
thiserror = "2"
anyhow = "1"
dialoguer = "0.11"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
diesel = { version = "2.2", features = ["sqlite"] }
diesel_migrations = "2.2"
libsqlite3-sys = { version = "0.30.1", features = [
  "bundled-sqlcipher-vendored-openssl",
] }
serde_json = { version = "1", git = "https://github.com/ThetaSinner/json.git", branch = "master" }
xdg = "2.5.2"
futures = "0.3"
tabled = "0.18"
base64 = "0.22"
human_bytes = "0.4.3"

sodoken = "0.0.904-alpha"
libsodium-sys-stable = "1.22.2"
libc = "0.2.170"

rpassword = "7.3"

proc-ctl = { version = "0.4.1", optional = true }
holochain_websocket = { version = "0.4.2", optional = true }
serde = { version = "1.0.203", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
rand = "0.9"
holochain = { version = "0.4.2", default-features = false, features = [
  "sweettest",
  "wasmer_sys",
] }

fixture_types = { path = "fixture/fixture_types" }

[features]
default = ["discover"]

discover = ["dep:proc-ctl", "dep:holochain_websocket"]
