[workspace]
members = ["fixture", "fixture_integrity", "fixture_types"]

resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
hdi = "=0.5.1"
hdk = "=0.4.1"
serde = "1"

fixture_integrity = { path = "fixture_integrity" }
fixture_types = { path = "fixture_types" }
