[workspace]
members = ["fixture", "fixture_integrity", "fixture_types"]

resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
hdi = "=0.7.1-rc.0"
hdk = "=0.6.1-rc.0"
holochain_serialized_bytes = "*"
serde = "1"

fixture_integrity = { path = "fixture_integrity" }
fixture_types = { path = "fixture_types" }
